--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE  html>
 <html  lang="en">
-<head> ht
+<head> 
 	<meta  charset="UTF-8">
 	<meta  name="viewport"  content="width=device-width, initial-scale=1.0">
 	<meta  http-equiv="X-UA-Compatible"  content="ie=edge">
@@ -22,6 +22,9 @@
         <textarea id="notes" name="notes" type="text"></textarea>
         <label for="twitter" name="twitter" type="text"></label>
         <input id="twitter" name="twitter" type="text">
+        <input id="submit" type="submit" value="Save contact">
     </form>
+    <div id="contact-list"></div>
+    <script src="./assets/js/app.js"></script>
 </body>
 </html> 
