--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <input id="company" name="comapny" type="text">
         <label for="notes">Notes</label>
         <textarea id="notes" name="notes" type="text"></textarea>
-        <label for="twitter" name="twitter" type="text"></label>
+        <label for="twitter" name="twitter" type="text">Twitter</label>
         <input id="twitter" name="twitter" type="text">
         <input id="submit" type="submit" value="Save contact">
     </form>
