--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,21 @@
 	<h1>Contacts</h1>
     <button id="add-contact">Add Contact</button>
         <form id="new-contact-form">
-            <label for="name">Name</label>
-            <input id="name" name="name" type="text">
-            <label for="email">Email</label>
-            <input id="email" name="email" type="email">
-            <label for="phone">Phone</label>
-            <input id="phone" name="phone" type="text">
-            <label for="company">Company</label>
-            <input id="company" name="comapny" type="text">
-            <label for="notes">Notes</label>
-            <textarea name="notes" id="notes" type="textarea" ></textarea>
-            <label for="twitter">Twitter</label>
-            <input id="twitter" name="twitter" type="text">
+            <label for="name">Name</label><br>
+            <input id="name" name="name" type="text"><br>
+            <label for="email">Email</label><br>
+            <input id="email" name="email" type="email"><br>
+            <label for="phone">Phone</label><br>
+            <input id="phone" name="phone" type="text"><br>
+            <label for="company">Company</label><br>
+            <input id="company" name="comapny" type="text"><br>
+            <label for="notes">Notes</label><br>
+            <textarea name="notes" id="notes" type="textarea" ></textarea><br>
+            <label for="twitter">Twitter</label><br>
+            <input id="twitter" name="twitter" type="text"><br>
+            <input id="submit" type="submit" value="Save Contact">
         </form>
+            <div id="contact-list"></div>
+            <script src="./assets/js/app.js"></script>
 </body>
 </html> 
