ADding styling and css folder and page

--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE  html>
-<html  lang="en">
+<html lang="en">
+
 <head>
-	<meta  charset="UTF-8">
-	<meta  name="viewport"  content="width=device-width, initial-scale=1.0">
-	<meta  http-equiv="X-UA-Compatible"  content="ie=edge">
-	<title>My Address book</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>My Address book</title>
 </head>
+
 <body>
-	<h1>Contacts</h1>
+    <h1>Contacts</h1>
     <button id="add-contact">Add Contact</button>
-        <form id="new-contact-form">
-            <label for="name">Name</label><br>
-            <input id="name" name="name" type="text"><br>
-            <label for="email">Email</label><br>
-            <input id="email" name="email" type="email"><br>
-            <label for="phone">Phone</label><br>
-            <input id="phone" name="phone" type="text"><br>
-            <label for="company">Company</label><br>
-            <input id="company" name="comapny" type="text"><br>
-            <label for="notes">Notes</label><br>
-            <textarea name="notes" id="notes" type="textarea" ></textarea><br>
-            <label for="twitter">Twitter</label><br>
-            <input id="twitter" name="twitter" type="text"><br>
-            <input id="submit" type="submit" value="Save Contact">
-        </form>
-            <div id="contact-list"></div>
-            <script src="./assets/js/app.js"></script>
+    <form id="new-contact-form">
+        <label for="name">Name</label><br>
+        <input id="name" name="name" type="text"><br>
+        <label for="email">Email</label><br>
+        <input id="email" name="email" type="email"><br>
+        <label for="phone">Phone</label><br>
+        <input id="phone" name="phone" type="text"><br>
+        <label for="company">Company</label><br>
+        <input id="company" name="comapny" type="text"><br>
+        <label for="notes">Notes</label><br>
+        <textarea name="notes" id="notes" type="textarea"></textarea><br>
+        <label for="twitter">Twitter</label><br>
+        <input id="twitter" name="twitter" type="text"><br><br>
+        <input id="submit" type="submit" value="Save Contact"><br>
+    </form>
+    <div id="contact-list"></div>
+    <script src="./assets/js/app.js"></script>
 </body>
-</html> 
+
+</html>
